--- a/admin/app/views/spree/admin/dashboard/analytics.html.erb
+++ b/admin/app/views/spree/admin/dashboard/analytics.html.erb
@@ -113,6 +113,6 @@
     </div>
   </div>
 
-  <%= render 'top_products' if @top_products.present? %>
+  <%= render 'top_products' if @top_products %>
   <%= render 'visits' if @visits %>
 <% end %>
