--- a/admin/app/views/spree/admin/products/_filters.html.erb
+++ b/admin/app/views/spree/admin/products/_filters.html.erb
@@ -1,4 +1,14 @@
-<%= search_form_for product_list_filters_search_form_path, class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
+<% frame_name ||= nil %>
+
+<%= search_form_for product_list_filters_search_form_path,
+  class: "filter-wrap border-bottom",
+  data: {
+    controller: "filters reveal",
+    reveal_hidden_class: "d-none",
+    filters_url_value: request.url
+  } do |f| %>
+  <%= hidden_field_tag :frame_name, frame_name if frame_name.present? %>
+
   <div class="d-flex flex-column flex-lg-row gap-2">
     <%= render 'spree/admin/shared/filters_search_bar', param: :multi_search %>
 
