--- a/admin/app/views/spree/admin/shared/_stock_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/_stock_nav.html.erb
@@ -1,4 +1,4 @@
 <ul class="nav mb-0" id="pills-tab" role="tablist">
-  <%= nav_pill_list_item(:stock_items) if can?(:manage, Spree::StockItem) %>
-  <%= nav_pill_list_item(:stock_transfers) if can?(:manage, Spree::StockTransfer) %>
+  <%= nav_item(Spree.t(:stock_items), spree.admin_stock_items_path) if can?(:manage, Spree::StockItem) %>
+  <%= nav_item(Spree.t(:stock_transfers), spree.admin_stock_transfers_path) if can?(:manage, Spree::StockTransfer) %>
 </ul>
