--- a/admin/app/views/spree/admin/shared/_tax_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/_tax_nav.html.erb
@@ -1,4 +1,4 @@
 <%= content_for(:page_tabs) do %>
-  <%= nav_pill_list_item(:tax_rates, url: spree.admin_tax_rates_path) if can?(:manage, Spree::TaxRate) %>
-  <%= nav_pill_list_item(:tax_categories, url: spree.admin_tax_categories_path) if can?(:manage, Spree::TaxCategory) %>
+  <%= nav_item(Spree.t(:tax_rates), spree.admin_tax_rates_path) if can?(:manage, Spree::TaxRate) %>
+  <%= nav_item(Spree.t(:tax_categories), spree.admin_tax_categories_path) if can?(:manage, Spree::TaxCategory) %>
 <% end %>
