--- a/admin/app/views/spree/admin/dashboard/analytics.html.erb
+++ b/admin/app/views/spree/admin/dashboard/analytics.html.erb
@@ -115,4 +115,6 @@
 
   <%= render 'top_products' if @top_products %>
   <%= render 'visits' if @visits %>
+
+  <%= render_admin_partials(:dashboard_analytics_partials) %>
 <% end %>
