--- a/admin/app/views/spree/admin/orders/_filters.html.erb
+++ b/admin/app/views/spree/admin/orders/_filters.html.erb
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      <%= render "spree/admin/orders/extra_filters", f: f %>
+      <%= render_admin_partials(:orders_filters_partials, f: f) %>
     </div>
 
     <div class="form-actions">
