--- a/admin/app/views/spree/admin/stores/form/_basic.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_basic.html.erb
@@ -155,6 +155,6 @@
       </div>
     </div>
   </div>
-
-  <%= render "spree/admin/stores/form/custom", f: f %>
 </div>
+
+<%= render_admin_partials(:store_form_partials, f: f) %>
