--- a/admin/app/views/spree/admin/orders/edit.html.erb
+++ b/admin/app/views/spree/admin/orders/edit.html.erb
@@ -1,23 +1,21 @@
 <%= render 'header' %>
-<%= render 'header_custom' %>
+<%= render_admin_partials(:order_page_header_partials, order: @order) %>
 
 <div class="container px-0">
   <div class="row">
     <div class="col-lg-8">
-
       <%= render 'line_items' %>
       <%= render 'shipments' %>
       <%= render 'customer_returns' %>
       <%= render 'return_authorizations' %>
       <%= render 'payments'%>
       <%= render 'refunds'%>
-
-      <%= render 'body_custom' %>
+      <%= render_admin_partials(:order_page_body_partials, order: @order) %>
       <%= render 'summary' %>
     </div>
     <div class="col-lg-4">
-      <!-- TODO: add notes -->
       <%= render 'customer' %>
+      <%= render_admin_partials(:order_page_sidebar_partials, order: @order) %>
     </div>
   </div>
 </div>
