--- a/admin/app/views/spree/admin/roles/_form.html.erb
+++ b/admin/app/views/spree/admin/roles/_form.html.erb
@@ -2,5 +2,5 @@
   <%= f.label :name, raw(Spree.t(:name) + required_span_tag) %>
   <%= f.text_field :name, class: 'form-control' %>
   <%= f.error_message_on :name %>
-<% end %>
+</div>
 
