--- a/admin/app/views/spree/admin/store_credit_categories/_form.html.erb
+++ b/admin/app/views/spree/admin/store_credit_categories/_form.html.erb
@@ -2,4 +2,4 @@
   <%= f.label :name, raw(Spree.t(:name) + required_span_tag) %>
   <%= f.text_field :name, class: 'form-control' %>
   <%= f.error_message_on :name %>
-<% end %>
+</div>
