Fixed creating new Stores in dev environment plus added a nice UI for switching between stores

--- a/admin/app/assets/stylesheets/spree/admin/components/_main.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_main.scss
@@ -82,7 +82,7 @@ turbo-frame[loading] .spinner-border, turbo-frame[busy] .spinner-border {
       }
     }
 
-    .badge {
+    .badge:not(.badge-info) {
       @extend .badge-light;
     }
   }
