--- a/admin/app/views/spree/admin/pages/index.html.erb
+++ b/admin/app/views/spree/admin/pages/index.html.erb
@@ -7,7 +7,7 @@
 
 <div class="card-lg">
   <%= render "spree/admin/pages/filters" %>
-  <% if @pages.any? %>
+  <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
         <thead class="text-muted">
@@ -17,10 +17,10 @@
           </tr>
         </thead>
         <tbody>
-          <%= render collection: @pages, partial: "spree/admin/pages/page", cached: spree_base_cache_scope %>
+          <%= render collection: @collection, partial: "spree/admin/pages/page", cached: spree_base_cache_scope %>
         </tbody>
       </table>
-      <%= render partial: "spree/admin/shared/index_table_options", collection: @pages %>
+      <%= render "spree/admin/shared/index_table_options", collection: @collection %>
     </div>
   <% else %>
     <%= render 'spree/admin/shared/no_resource_found' %>
